Closed
Bug 1646026
Opened 5 years ago
Closed 5 years ago
Crash in [@ mozilla::dom::EventSourceImpl::EventSourceServiceNotifier::~EventSourceServiceNotifier]
Categories
(DevTools :: Netmonitor, defect)
DevTools
Netmonitor
Tracking
(firefox-esr68 unaffected, firefox77 unaffected, firefox78 unaffected, firefox79 fixed)
RESOLVED
FIXED
Firefox 79
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox77 | --- | unaffected |
| firefox78 | --- | unaffected |
| firefox79 | --- | fixed |
People
(Reporter: achronop, Assigned: smaug)
References
(Regression)
Details
(Keywords: regression)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-b5298b14-754e-4dd4-8f83-f25900200615.
Top 10 frames of crashing thread:
0 libxul.so mozilla::dom::EventSourceImpl::EventSourceServiceNotifier::~EventSourceServiceNotifier dom/base/EventSource.cpp:313
1 libxul.so mozilla::dom::EventSourceImpl::OnStartRequest dom/base/EventSource.cpp:724
2 libxul.so nsCORSListenerProxy::OnStartRequest netwerk/protocol/http/nsCORSListenerProxy.cpp:435
3 libxul.so mozilla::net::HttpChannelChild::DoOnStartRequest netwerk/protocol/http/HttpChannelChild.cpp:700
4 libxul.so mozilla::net::HttpChannelChild::OnStartRequest netwerk/protocol/http/HttpChannelChild.cpp:547
5 libxul.so mozilla::net::ChannelEventQueue::RunOrEnqueue netwerk/ipc/ChannelEventQueue.h:264
6 libxul.so mozilla::net::HttpChannelChild::RecvOnStartRequest netwerk/protocol/http/HttpChannelChild.cpp:417
7 libxul.so mozilla::net::PHttpChannelChild::OnMessageReceived ipc/ipdl/PHttpChannelChild.cpp:636
8 libxul.so mozilla::dom::PContentChild::OnMessageReceived ipc/ipdl/PContentChild.cpp:8188
9 libxul.so mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:2166
Updated•5 years ago
|
Has Regression Range: --- → yes
Comment 1•5 years ago
|
||
Set release status flags based on info from the regressing bug 1643677
status-firefox77:
--- → unaffected
status-firefox78:
--- → unaffected
status-firefox79:
--- → affected
status-firefox-esr68:
--- → unaffected
| Assignee | ||
Comment 3•5 years ago
|
||
(It is basically harmless assertion)
| Assignee | ||
Comment 4•5 years ago
|
||
Pushed by opettay@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f993bff52a4e
Remove the overly strict assertion in EventSourceServiceNotifier::~EventSourceServiceNotifier,
Comment 6•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 79
Updated•4 years ago
|
Keywords: regression
You need to log in
before you can comment on or make changes to this bug.
Description
•