Bug 1646026 - Remove the overly strict assertion in EventSourceServiceNotifier::~EventSourceServiceNotifier,

Differential Revision: https://phabricator.services.mozilla.com/D79960